Removing single letters at the end of lines

--- a/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/1-intro.tex
@@ -9,7 +9,7 @@ W pracy omówiona jest także trudność planowania ruchu w sposób globalny, ja
 
 \section{Specyfikacja problemu}
 
-Problemem rozwiązywanym w pracy, jest szybkie i bezpieczne zaplanowanie ruchu na skrzyżowaniach. Droga oraz czas reprezentowane są w sposób dyskretny. Czas wyrażany jest w krokach czasowych, a długość drogi liczona jest w odcinkach. Metoda rozwiązująca ten problem ma określony stan początkowy, którym jest położenie wszystkich pojazdów wraz z parametrami (prędkość, przyspieszenie) na skrzyżowaniach oraz opis dróg. System zwraca dokładny plan, który prowadzi do bezkolizyjnego opuszczenia przez samochody skrzyżowań. Rozwiązanie problemu polega na znalezieniu kolejnych stanów prowadzących do optymalnego wyniku. Pojedynczy stan można zmienić na wiele sposobów. Dla przykładu, pojazd musi mieć określoną prędkość oraz pozycję na drodze, na której się znajduje. W kolejnych stanach może on zmienić położenie, przyspieszyć, zwolnić lub prędkości nie zmieniać. Duża liczba możliwości zmian pojedynczego stanu oznacza, że w celu znalezienia stanów prowadzących do optymalnego rozwiązania, trzeba przeszukać ich bardzo wiele.
+Problemem rozwiązywanym w pracy, jest szybkie i bezpieczne zaplanowanie ruchu na skrzyżowaniach. Droga oraz czas reprezentowane są w sposób dyskretny. Czas wyrażany jest w krokach czasowych, a długość drogi liczona jest w odcinkach. Metoda rozwiązująca ten problem ma określony stan początkowy, którym jest położenie wszystkich pojazdów wraz z~parametrami (prędkość, przyspieszenie) na skrzyżowaniach oraz opis dróg. System zwraca dokładny plan, który prowadzi do bezkolizyjnego opuszczenia przez samochody skrzyżowań. Rozwiązanie problemu polega na znalezieniu kolejnych stanów prowadzących do optymalnego wyniku. Pojedynczy stan można zmienić na wiele sposobów. Dla przykładu, pojazd musi mieć określoną prędkość oraz pozycję na drodze, na której się znajduje. W kolejnych stanach może on zmienić położenie, przyspieszyć, zwolnić lub prędkości nie zmieniać. Duża liczba możliwości zmian pojedynczego stanu oznacza, że w celu znalezienia stanów prowadzących do optymalnego rozwiązania, trzeba przeszukać ich bardzo wiele.
 \newline
 \indent
 Kolejną trudnością w problemie, jest unikanie kolizji. Dla wszystkich możliwości algorytm planowania powinien usunąć wszystkie kolizje na jednym pasie oraz te, przy przekraczaniu przez skrzyżowanie. Unikanie kolizji prowadzi do przeszukiwania wygenerowanych stanów, analizy każdego z pojazdów oraz każdego skrzyżowania dwóch dróg, a następnie usuwania stanów powodujących kolizję.
