--- a/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/2-state-of-the-art.tex
@@ -1,11 +1,11 @@
-\mychapter{2}{2. Istniejące rozwiązania w zakresie planowania ruchu i koordynacji ruchu na skrzyżowaniach} \label{chap:state-of-the-art}
+\mychapter{2}{2. Istniejące rozwiązania w~zakresie planowania ruchu i~koordynacji ruchu na skrzyżowaniach} \label{chap:state-of-the-art}
 
 \section{Planowanie ruchu na skrzyżowaniach}
 
-Planowanie ruchu zawsze wiąże się z rozmiarem problemu. Dla koordynacji ruchu na skrzyżowaniach o rozmiarze problemu stanowi rozmiar dróg, ich liczba oraz liczba przecięć między nimi, a także parametry i liczba pojazdów. Z planowaniem ruchu wiąże się trudność, jaką jest szybkość zmian w środowisku. W przypadku niezastosowania się pojazdu do planu algorytm musi natychmiast wyliczyć poprawiony plan. System planujący ruch drogowy powinien być więc systemem czasu rzeczywistego. Cechą takich systemów, jest równoległość w czasie zmian w środowisku oraz prowadzonych przez system obliczeń opierających się o stan środowiska. Algorytmy heurystyczne są najczęściej stosowane w wielokrotnie zmieniających się środowiskach.
+Planowanie ruchu zawsze wiąże się z~rozmiarem problemu. Dla koordynacji ruchu na skrzyżowaniach o~rozmiarze problemu stanowi rozmiar dróg, ich liczba oraz liczba przecięć między nimi, a~także parametry i~liczba pojazdów. Z~planowaniem ruchu wiąże się trudność, jaką jest szybkość zmian w~środowisku. W~przypadku niezastosowania się pojazdu do planu algorytm musi natychmiast wyliczyć poprawiony plan. System planujący ruch drogowy powinien być więc systemem czasu rzeczywistego. Cechą takich systemów, jest równoległość w~czasie zmian w~środowisku oraz prowadzonych przez system obliczeń opierających się o~stan środowiska. Algorytmy heurystyczne są najczęściej stosowane w~wielokrotnie zmieniających się środowiskach.
 \newline
 \indent
-Popularnym modelem reprezentującym sieci dróg jest graf. Wierzchołki grafu to skrzyżowania dróg. Krawędzie natomiast, reprezentują odległości między skrzyżowaniami za pomocą wag. Często stosowanym algorytmem do znajdowania najkrótszej ścieżki w grafie, jest algorytm Dijkstry \cite{shaikh2013agv}, \cite{ando2003autonomous}, \cite{huang2013improved}, \cite{gazis1997optimal}, \cite{broxmeyer1994vehicle}, \cite{kanoh2007dynamic}. O rzędzie złożoności algorytmu decyduje implementacja kolejki. W przypadku implementacji kolejki poprzez kopiec, złożoność algorytmu to:
+Popularnym modelem reprezentującym sieci dróg jest graf. Wierzchołki grafu to skrzyżowania dróg. Krawędzie natomiast, reprezentują odległości między skrzyżowaniami za pomocą wag. Często stosowanym algorytmem do znajdowania najkrótszej ścieżki w~grafie, jest algorytm Dijkstry \cite{shaikh2013agv}, \cite{ando2003autonomous}, \cite{huang2013improved}, \cite{gazis1997optimal}, \cite{broxmeyer1994vehicle}, \cite{kanoh2007dynamic}. O~rzędzie złożoności algorytmu decyduje implementacja kolejki. W~przypadku implementacji kolejki poprzez kopiec, złożoność algorytmu to:
 \newline
 \newline
 \begin{math}
@@ -13,12 +13,12 @@ O(E + V\log V)
 \end{math}
 \newline
 \newline
-gdzie \begin{math}E\end{math} to liczba krawędzi grafu, a \begin{math}V\end{math} liczba wierzchołków grafu.
+gdzie \begin{math}E\end{math} to liczba krawędzi grafu, a~\begin{math}V\end{math} liczba wierzchołków grafu.
 \indent
 \newline
 \newline
 \indent
-  Jednym z algorytmów heurystycznych, stosowanych do szukania najkrótszej ścieżki, jest Algorytm A* \cite{munteanmobile}, \cite{oleiwi2014modified}, \cite{wojnicki2015robust}, \cite{elhalawany2013modified}, \cite{dechter1985generalized}. Złożoność czasowa algorytmu jest zależna od zastosowanej funkcji heurystyki. Jeśli funkcja heurystyki spełnia następujący warunek:
+  Jednym z~algorytmów heurystycznych, stosowanych do szukania najkrótszej ścieżki, jest Algorytm A* \cite{munteanmobile}, \cite{oleiwi2014modified}, \cite{wojnicki2015robust}, \cite{elhalawany2013modified}, \cite{dechter1985generalized}. Złożoność czasowa algorytmu jest zależna od zastosowanej funkcji heurystyki. Jeśli funkcja heurystyki spełnia następujący warunek:
 \newline
 \newline
 \begin{math}
@@ -26,57 +26,57 @@ gdzie \begin{math}E\end{math} to liczba krawędzi grafu, a \begin{math}V\end{mat
 \end{math}
 \newline
 \newline
-gdzie \begin{math}h^{*}\end{math} jest optymalną heurystyką - liczba przeszukanych węzłów rośnie wielomianowo w stosunku do długości rozwiązania.
+gdzie \begin{math}h^{*}\end{math} jest optymalną heurystyką - liczba przeszukanych węzłów rośnie wielomianowo w~stosunku do długości rozwiązania.
 \newline
 \indent
-W artykule \cite{wojnicki2015robust} autorzy przedstawili algorytm A*, w celu planowania wielowymiarowego. W celu przybliżenia złożoności jako przykładowe środowisko podana została dwuwymiarowa, dyskretna przestrzeń kwadratowa o boku 7. Pojazdy mogą zajmować wówczas 49 pozycji oznaczonych współrzędnymi \begin{math}(x, y)\end{math}. Dla jednego pojazdu możliwość zajmowanych pozycji wynosi \begin{math}(7 * 7) = 49 \end{math}. Dla dwóch pojazdów jest to już \begin{math}(7 * 7) * (7 * 7 - 1) = 2352 \end{math}. Aktualny stan jest wówczas opisywany jako \begin{math}(x1, y1, x2, y2)\end{math}. Złożoność rośnie wraz z przetrzymywaniem kolejnych informacji na temat pojazdów, czyli na przykład prędkości czy przyspieszenia.
+W~artykule \cite{wojnicki2015robust} autorzy przedstawili algorytm A*, w~celu planowania wielowymiarowego. W~celu przybliżenia złożoności jako przykładowe środowisko podana została dwuwymiarowa, dyskretna przestrzeń kwadratowa o~boku 7. Pojazdy mogą zajmować wówczas 49 pozycji oznaczonych współrzędnymi \begin{math}(x, y)\end{math}. Dla jednego pojazdu możliwość zajmowanych pozycji wynosi \begin{math}(7 * 7) = 49 \end{math}. Dla dwóch pojazdów jest to już \begin{math}(7 * 7) * (7 * 7 - 1) = 2352 \end{math}. Aktualny stan jest wówczas opisywany jako \begin{math}(x1, y1, x2, y2)\end{math}. Złożoność rośnie wraz z~przetrzymywaniem kolejnych informacji na temat pojazdów, czyli na przykład prędkości czy przyspieszenia.
 \newline
 \indent
-Autorzy artykułu \cite{leena2014survey} zwrócili uwagę na podział planowania na globalne i lokalne. W podejściu globalnym, dla algorytmu musi być znane całe środowisko, co wiąże się z dużym obciążeniem pamięciowym - algorytm przechowuje informacje na temat stanów wszystkich pojazdów na skrzyżowaniach. W podejściu lokalnym, środowisko dla pojedynczego pojazdu nie jest znane, algorytm poznaje je w czasie rzeczywistym. W przedstawionym rozwiązaniu zastosowane jest podejście globalne.
+Autorzy artykułu \cite{leena2014survey} zwrócili uwagę na podział planowania na globalne i~lokalne. W~podejściu globalnym, dla algorytmu musi być znane całe środowisko, co wiąże się z~dużym obciążeniem pamięciowym - algorytm przechowuje informacje na temat stanów wszystkich pojazdów na skrzyżowaniach. W~podejściu lokalnym, środowisko dla pojedynczego pojazdu nie jest znane, algorytm poznaje je w~czasie rzeczywistym. W~przedstawionym rozwiązaniu zastosowane jest podejście globalne.
 
 \section{Planowanie ruchu przy użyciu świateł drogowych}
 
 \indent
-Najczęściej stosowanym systemem do koordynacji ruchu na skrzyżowaniach są światła drogowe. Powodują one opóźnienia wiążące się z oczekiwaniem przy świetle pomarańczowym, które jednocześnie zapewnia bezpieczeństwo. Powstało wiele optymalizacji świateł drogowych w celu przyspieszenia ruchu na skrzyżowaniach.
+Najczęściej stosowanym systemem do koordynacji ruchu na skrzyżowaniach są światła drogowe. Powodują one opóźnienia wiążące się z~oczekiwaniem przy świetle pomarańczowym, które jednocześnie zapewnia bezpieczeństwo. Powstało wiele optymalizacji świateł drogowych w~celu przyspieszenia ruchu na skrzyżowaniach.
 \newline
 \indent
-W artykule \cite{brockfeld2001optimizing} autorzy opisują następujące optymalizacje sygnalizacji świetlnej: \textit{Synchronized Traffic Lights, Green Wave, Random Offset}. Synchroniczne światła drogowe oparte są o obliczane cykle oraz o klastry samochodów poruszających się po skrzyżowaniach. Klaster samochodów rusza, gdy pojawi się światło zielone. Pierwszy samochód rusza z największym przyspieszeniem, aż dojedzie do następnego skrzyżowania. Wówczas natychmiast włącza się światło czerwone i reszta samochodów w klastrze dojeżdża do skrzyżowania. Cykle są obliczane w sposób, aby opóźnienia były najmniejsze. Zgodnie ze zdaniem autorów, jedną z wad jest fakt, że rozwiązanie działa najlepiej dla cykli, które nie występują na rzeczywistych skrzyżowaniach. W celu usprawnienia, autorzy zaproponowali strategię zielonej fali. Głównym celem tego podejścia jest to, aby duże klastry samochodów były w ruchu. W artykule strategia zielonej fali daje lepsze efekty niż strategia synchronicznych świateł. Ostatnią przedstawioną strategią jest losowa zmiana świateł przed skrzyżowaniami. W przeciwieństwie do poprzednich strategii - światła na skrzyżowaniach nie przełączają się jednocześnie. Użycie tej strategii powoduje powstawanie dużych klastrów samochodów na niektórych drogach i szybki przepływ na innych. Globalnie, strategia zielonej fali przynosiła najlepsze efekty. Przedstawione rozwiązania, muszą jednak stosować światło pomarańczowe w celu utrzymania bezpieczeństwa, co powoduje opóźnienia na każdym skrzyżowaniu.
+W~artykule \cite{brockfeld2001optimizing} autorzy opisują następujące optymalizacje sygnalizacji świetlnej: \textit{Synchronized Traffic Lights, Green Wave, Random Offset}. Synchroniczne światła drogowe oparte są o~obliczane cykle oraz o~klastry samochodów poruszających się po skrzyżowaniach. Klaster samochodów rusza, gdy pojawi się światło zielone. Pierwszy samochód rusza z~największym przyspieszeniem, aż dojedzie do następnego skrzyżowania. Wówczas natychmiast włącza się światło czerwone i~reszta samochodów w~klastrze dojeżdża do skrzyżowania. Cykle są obliczane w~sposób, aby opóźnienia były najmniejsze. Zgodnie ze zdaniem autorów, jedną z~wad jest fakt, że rozwiązanie działa najlepiej dla cykli, które nie występują na rzeczywistych skrzyżowaniach. W~celu usprawnienia, autorzy zaproponowali strategię zielonej fali. Głównym celem tego podejścia jest to, aby duże klastry samochodów były w~ruchu. W~artykule strategia zielonej fali daje lepsze efekty niż strategia synchronicznych świateł. Ostatnią przedstawioną strategią jest losowa zmiana świateł przed skrzyżowaniami. W~przeciwieństwie do poprzednich strategii - światła na skrzyżowaniach nie przełączają się jednocześnie. Użycie tej strategii powoduje powstawanie dużych klastrów samochodów na niektórych drogach i~szybki przepływ na innych. Globalnie, strategia zielonej fali przynosiła najlepsze efekty. Przedstawione rozwiązania, muszą jednak stosować światło pomarańczowe w~celu utrzymania bezpieczeństwa, co powoduje opóźnienia na każdym skrzyżowaniu.
 \newline
 \indent
-Autorzy artykułu \cite{athmaraman2005adaptive} opisują koordynację ruchu przy użyciu algorytmu 'REAL TIME QUEUE LENGTH ESTIMATION: THE APTTC ALGORITHM'. Koordynacja ta działa przy użyciu tablicy sensorów fotoelektrycznych rozmieszczonych na drogach przy skrzyżowaniach. Algorytm w zależności od danych i estymacji kolejek, odpowiednio steruje sygnalizacją świetlną w celu uniknięcia opóźnień. Algorytm został uruchomiony w mieście Chennai w Indiach, gdzie oszacowane zostały długości kolejek aut na drogach poprzez zamontowane sensory na każdy dzień tygodnia. Rozwiązanie jest jednak zaprojektowane do działania na jednym skrzyżowaniu oraz nie eliminuje opóźnień spowodowanych światłem pomarańczowym. Co więcej, w rozwiązaniu konieczne jest montowanie sensorów na drogach.
+Autorzy artykułu \cite{athmaraman2005adaptive} opisują koordynację ruchu przy użyciu algorytmu 'REAL TIME QUEUE LENGTH ESTIMATION: THE APTTC ALGORITHM'. Koordynacja ta działa przy użyciu tablicy sensorów fotoelektrycznych rozmieszczonych na drogach przy skrzyżowaniach. Algorytm w~zależności od danych i~estymacji kolejek, odpowiednio steruje sygnalizacją świetlną w~celu uniknięcia opóźnień. Algorytm został uruchomiony w~mieście Chennai w~Indiach, gdzie oszacowane zostały długości kolejek aut na drogach poprzez zamontowane sensory na każdy dzień tygodnia. Rozwiązanie jest jednak zaprojektowane do działania na jednym skrzyżowaniu oraz nie eliminuje opóźnień spowodowanych światłem pomarańczowym. Co więcej, w~rozwiązaniu konieczne jest montowanie sensorów na drogach.
 \newline
 \indent
-W artykule \cite{de1998optimal} opisane zostało kierowanie ruchem drogowym na jednym skrzyżowaniu poprzez optymalizację kolejek. W rozwiązaniu brane pod uwagę są takie dane jak średni czas oczekiwania, średnia długość kolejki i najdłuższy czas oczekiwania. Istnieje także możliwość przekazania parametrów odpowiadających za maksymalny czas trwania światła czerwonego oraz zielonego. Wynikiem rozwiązania jest schemat zmiany świateł, który liczony jest za pomocą funkcji obiektowych na podstawie długości kolejek. W rozwiązaniu pominięty został element bezpieczeństwa, jakim jest światło pomarańczowe. Rozwiązanie zostało pokazane także na jednym skrzyżowaniu, a nie na całej sieci skrzyżowań.
+W~artykule \cite{de1998optimal} opisane zostało kierowanie ruchem drogowym na jednym skrzyżowaniu poprzez optymalizację kolejek. W~rozwiązaniu brane pod uwagę są takie dane jak średni czas oczekiwania, średnia długość kolejki i~najdłuższy czas oczekiwania. Istnieje także możliwość przekazania parametrów odpowiadających za maksymalny czas trwania światła czerwonego oraz zielonego. Wynikiem rozwiązania jest schemat zmiany świateł, który liczony jest za pomocą funkcji obiektowych na podstawie długości kolejek. W~rozwiązaniu pominięty został element bezpieczeństwa, jakim jest światło pomarańczowe. Rozwiązanie zostało pokazane także na jednym skrzyżowaniu, a~nie na całej sieci skrzyżowań.
 \newline
 \indent
-  Autorzy artykułu \cite{lammer2008self} przedstawili system kontroli świateł i przepływu pojazdów na sieciach drogowych. Rozwiązanie stosowane jest dla całych sieci skrzyżowań. Autorzy opierają się o krótkie prognozy ruchu i na ich podstawie liczą długość trwania światła zielonego. Klasyczne rozwiązania działają na wcześniej obliczonych danych oraz działają we wcześniej określonych miejscach największego ruchu. Takie rozwiązania powodują, że zielona fala trwa dużej niż powinna. W rozwiązaniu zastosowana jest także strategia stabilizacji, która zapewnia fakt, iż długość kolejek nie będzie zbyt długa. Zapewnione jest to przez odpowiednią długość trwania światła zielonego. W rozwiązaniu, na każdym ze skrzyżowań, samochody będą traci czas na świetle pomarańczowym, które w rozwiązaniu jest konieczne, aby było ono bezpieczne. Ruch jest także optymalizowany dla sytuacji "średnich", które tak naprawdę nigdy nie występują. Wynikiem tego zjawiska jest fakt, że optymalizacja nigdy nie jest stosowana dla prawdziwej, aktualnej sytuacji.
+  Autorzy artykułu \cite{lammer2008self} przedstawili system kontroli świateł i~przepływu pojazdów na sieciach drogowych. Rozwiązanie stosowane jest dla całych sieci skrzyżowań. Autorzy opierają się o~krótkie prognozy ruchu i~na ich podstawie liczą długość trwania światła zielonego. Klasyczne rozwiązania działają na wcześniej obliczonych danych oraz działają we wcześniej określonych miejscach największego ruchu. Takie rozwiązania powodują, że zielona fala trwa dużej niż powinna. W~rozwiązaniu zastosowana jest także strategia stabilizacji, która zapewnia fakt, iż długość kolejek nie będzie zbyt długa. Zapewnione jest to przez odpowiednią długość trwania światła zielonego. W~rozwiązaniu, na każdym ze skrzyżowań, samochody będą traci czas na świetle pomarańczowym, które w~rozwiązaniu jest konieczne, aby było ono bezpieczne. Ruch jest także optymalizowany dla sytuacji "średnich", które tak naprawdę nigdy nie występują. Wynikiem tego zjawiska jest fakt, że optymalizacja nigdy nie jest stosowana dla prawdziwej, aktualnej sytuacji.
 \newline
 \indent
-W artykule \cite{ferreira2010self} przedstawiony został system zarządzania światłami za pomocą komunikacji pojazdów między sobą. Działanie systemu opiera się o sensory zamontowane przy skrzyżowaniach oraz urządzenia DSRC zamontowane w każdym z aut. Pojazdy komunikują się ze sobą za pomocą sieci bezprzewodowej, posiadają te same wersje map oraz posiadają GPS z dokładnością do pasa, na którym się znajdują. W zależności od zebranych, danych system odpowiednio przełącza światła w celu uniknięcia opóźnień. Przedstawione rozwiązanie jest kosztowne oraz pominięta jest w nim kwestia bezpieczeństwa, która w innych rozwiązaniach zapewniona jest poprzez oczekiwanie na świetle pomarańczowym.
+W~artykule \cite{ferreira2010self} przedstawiony został system zarządzania światłami za pomocą komunikacji pojazdów między sobą. Działanie systemu opiera się o~sensory zamontowane przy skrzyżowaniach oraz urządzenia DSRC zamontowane w~każdym z~aut. Pojazdy komunikują się ze sobą za pomocą sieci bezprzewodowej, posiadają te same wersje map oraz posiadają GPS z~dokładnością do pasa, na którym się znajdują. W~zależności od zebranych, danych system odpowiednio przełącza światła w~celu uniknięcia opóźnień. Przedstawione rozwiązanie jest kosztowne oraz pominięta jest w~nim kwestia bezpieczeństwa, która w~innych rozwiązaniach zapewniona jest poprzez oczekiwanie na świetle pomarańczowym.
     
 \section{Planowanie ruchu bez sygnalizacji świetlnej}
 
-W celu uniknięcia użycia świateł drogowych, istnieją także rozwiązania z wykorzystaniem algorytmów znajdujących najkrótszą ścieżkę. W artykule \cite{shaikh2013agv} autorzy wykorzystali algorytm Dijkstry do zarządzania ruchem przy użyciu automatycznie prowadzonych pojazdów. Autorzy przedstawili zarządzanie ruchem pojazdów w magazynie chcąc ograniczyć czas transportu. Algorytm Dijkstry wskazuje najkrótszą ścieżkę od jednego pojazdu do następnego. W przypadku, gdy na ścieżce znajdzie się przeszkoda - algorytm wylicza ścieżkę od nowa. Zastosowanie algorytmu Dijkstry do koordynacji ruchu na skrzyżowaniach jest zbyt złożone. Ponadto, unikanie kolizji jest wykonane poprzez ponowne wyliczanie najkrótszej ścieżki, zamiast unikania ich na bieżąco.
+W~celu uniknięcia użycia świateł drogowych, istnieją także rozwiązania z~wykorzystaniem algorytmów znajdujących najkrótszą ścieżkę. W~artykule \cite{shaikh2013agv} autorzy wykorzystali algorytm Dijkstry do zarządzania ruchem przy użyciu automatycznie prowadzonych pojazdów. Autorzy przedstawili zarządzanie ruchem pojazdów w~magazynie chcąc ograniczyć czas transportu. Algorytm Dijkstry wskazuje najkrótszą ścieżkę od jednego pojazdu do następnego. W~przypadku, gdy na ścieżce znajdzie się przeszkoda - algorytm wylicza ścieżkę od nowa. Zastosowanie algorytmu Dijkstry do koordynacji ruchu na skrzyżowaniach jest zbyt złożone. Ponadto, unikanie kolizji jest wykonane poprzez ponowne wyliczanie najkrótszej ścieżki, zamiast unikania ich na bieżąco.
 \newline
 \indent
-Autorzy artykułu \cite{huang2013improved} przedstawiają ulepszoną wersję algorytmu Dijkstry w celu znalezienia najkrótszej ścieżki. Do algorytmu Dijkstry wprowadzona została funkcja, dzięki której ignorowane są nieistotne wierzchołki w grafie. Dzięki tej modyfikacji algorytm jest o ~43\%-76\% szybszy. Rozwiązanie jest nadal zbyt złożone, by zastosować je do koordynacji ruchu na skrzyżowaniach. W rozwiązaniu nie ma także uwzględnionego unikania kolizji.
+Autorzy artykułu \cite{huang2013improved} przedstawiają ulepszoną wersję algorytmu Dijkstry w~celu znalezienia najkrótszej ścieżki. Do algorytmu Dijkstry wprowadzona została funkcja, dzięki której ignorowane są nieistotne wierzchołki w~grafie. Dzięki tej modyfikacji algorytm jest o~~43\%-76\% szybszy. Rozwiązanie jest nadal zbyt złożone, by zastosować je do koordynacji ruchu na skrzyżowaniach. W~rozwiązaniu nie ma także uwzględnionego unikania kolizji.
 \newline
 \indent
-W artykule \cite{ando2003autonomous} przedstawione zostało planowanie ruchu przy użyciu automatycznie prowadzonych pojazdów wraz z unikaniem kolizji. W rozwiązaniu każdy robot indywidualnie liczy najkrótszą dla siebie ścieżkę. Następnie, dane tras są wymieniane pomiędzy robotami, w celu ustalenia finalnego rozwiązania. Szukanie ścieżki jest wykonywane przy użyciu algorytmu Dijkstry. W celu unikania kolizji dla każdego pojazdu liczona jest funkcja kary. Waga kary jest zwiększana tak długo, aż zostanie znaleziona bezkolizyjna ścieżka. Złożoność rozwiązania jest zbyt duża by zastosować je dla skrzyżowań. Wymienianie danych pomiędzy pojazdami oraz podany w rozwiązaniu sposób rozwiązywania kolizji, nie znajduje zastosowania w koorydynacji ruch na skrzyżowaniach.
+W~artykule \cite{ando2003autonomous} przedstawione zostało planowanie ruchu przy użyciu automatycznie prowadzonych pojazdów wraz z~unikaniem kolizji. W~rozwiązaniu każdy robot indywidualnie liczy najkrótszą dla siebie ścieżkę. Następnie, dane tras są wymieniane pomiędzy robotami, w~celu ustalenia finalnego rozwiązania. Szukanie ścieżki jest wykonywane przy użyciu algorytmu Dijkstry. W~celu unikania kolizji dla każdego pojazdu liczona jest funkcja kary. Waga kary jest zwiększana tak długo, aż zostanie znaleziona bezkolizyjna ścieżka. Złożoność rozwiązania jest zbyt duża by zastosować je dla skrzyżowań. Wymienianie danych pomiędzy pojazdami oraz podany w~rozwiązaniu sposób rozwiązywania kolizji, nie znajduje zastosowania w~koorydynacji ruch na skrzyżowaniach.
 \newline
 \indent
-W patencie \cite{gazis1997optimal} autorzy przedstawili centralnie zaplanowany, generalny system przydzielający trasy, w celu utrzymania optymalnego ruchu. System zawiera dużą ilość komputerów zamontowanych w pojazdach w celu komunikacji między nimi, poprzez sieć bezprzewodową. Do znajdowania najkrótszej ścieżki, autorzy wykorzystali algorytm Dijkstry. Ścieżki liczone są przy użyciu danych dostarczanych przez komputery zamontowane w pojazdach. Celem patentu jest znalezienie drogi do celu w najkrótszym czasie poprzez omijanie zakorkowanych dróg. Nie jest to dokładne zaplanowanie poruszania się pojazdu wraz z unikaniem kolizji.
+W~patencie \cite{gazis1997optimal} autorzy przedstawili centralnie zaplanowany, generalny system przydzielający trasy, w~celu utrzymania optymalnego ruchu. System zawiera dużą ilość komputerów zamontowanych w~pojazdach w~celu komunikacji między nimi, poprzez sieć bezprzewodową. Do znajdowania najkrótszej ścieżki, autorzy wykorzystali algorytm Dijkstry. Ścieżki liczone są przy użyciu danych dostarczanych przez komputery zamontowane w~pojazdach. Celem patentu jest znalezienie drogi do celu w~najkrótszym czasie poprzez omijanie zakorkowanych dróg. Nie jest to dokładne zaplanowanie poruszania się pojazdu wraz z~unikaniem kolizji.
 \newline
 \indent
-Autorzy patentu \cite{broxmeyer1994vehicle} opisali system do kontroli ruchu i unikania kolizji na autostradach. Pod uwagę wzięte zostały zmiany pasów, unikanie kolizji oraz kontrolowanie trasy pojazdu. Unikanie kolizji zostało zapewnione poprzez komunikacje przez nadajniki radiowe oraz radioodbiorniki zamontowane w każdym z pojazdów. Rozwiązanie znajduje zastosowanie na autostradach. Unikanie kolizji ma miejsce na równoległych pasach. Tego podejścia nie da się zastosować, jeżeli chodzi o koordynacje ruchu na skrzyżowaniach.
+Autorzy patentu \cite{broxmeyer1994vehicle} opisali system do kontroli ruchu i~unikania kolizji na autostradach. Pod uwagę wzięte zostały zmiany pasów, unikanie kolizji oraz kontrolowanie trasy pojazdu. Unikanie kolizji zostało zapewnione poprzez komunikacje przez nadajniki radiowe oraz radioodbiorniki zamontowane w~każdym z~pojazdów. Rozwiązanie znajduje zastosowanie na autostradach. Unikanie kolizji ma miejsce na równoległych pasach. Tego podejścia nie da się zastosować, jeżeli chodzi o~koordynacje ruchu na skrzyżowaniach.
 \newline
 \indent
-W artykule \cite{kanoh2007dynamic} przedstawiony został system dynamicznego planowania ruchu do nawigacji samochodów przy użyciu 'VIRUS GENETIC ALGORITHMS'. Autorzy zaproponowali algorytm genetyczny, który jest bardziej wydajny od algorytmu A*, czy algorytmu Dijkstry. W rozwiązaniu zastosowana jest strategia infekcji wirusowej, dzięki czemu omijane są korki na drogach. Rozwiązanie jest zaprojektowane do wskazania najlepszej trasy, nie jest to dokładne zaplanowanie ruchu samochodów wraz z unikaniem kolizji.
+W~artykule \cite{kanoh2007dynamic} przedstawiony został system dynamicznego planowania ruchu do nawigacji samochodów przy użyciu 'VIRUS GENETIC ALGORITHMS'. Autorzy zaproponowali algorytm genetyczny, który jest bardziej wydajny od algorytmu A*, czy algorytmu Dijkstry. W~rozwiązaniu zastosowana jest strategia infekcji wirusowej, dzięki czemu omijane są korki na drogach. Rozwiązanie jest zaprojektowane do wskazania najlepszej trasy, nie jest to dokładne zaplanowanie ruchu samochodów wraz z~unikaniem kolizji.
 
 \section{Użycie algorytmu A* do planowania ruchu}
 
 \indent
-Algorytm A* jest często stosowany do szukania najkrótszej ścieżki oraz planowania ruchu. W artykule \cite{dechter1985generalized} omówiona została optymalność tego algorytmu oraz funkcja heurystyki. A* jest algorytmem heurystycznym, który znajduje najkrótszą ścieżkę w grafie ważonym z dowolnego podanego wierzchołka do wierzchołka celu. Wierzchołkiem celu jest wierzchołek spełniający zadane warunki wygranej. W artykule przedstawione zostały poprzednie próby udowodnienia optymalności algorytmu. Autorzy przeprowadzili także własny dowód na optymalność algorytmu A*. Dowód polega na fakcie, iż kiedy funkcja heurystyki nigdy nie przeszacowuje, wtedy algorytm A* jest optymalny. Dla grafu algorytm A* od zadanego wierzchołka startowego tworzy ścieżkę, wybierając niezbadany sąsiedni wierzchołek. Wybiera go w sposób, aby minimalizować funkcję:
+Algorytm A* jest często stosowany do szukania najkrótszej ścieżki oraz planowania ruchu. W~artykule \cite{dechter1985generalized} omówiona została optymalność tego algorytmu oraz funkcja heurystyki. A* jest algorytmem heurystycznym, który znajduje najkrótszą ścieżkę w~grafie ważonym z~dowolnego podanego wierzchołka do wierzchołka celu. Wierzchołkiem celu jest wierzchołek spełniający zadane warunki wygranej. W~artykule przedstawione zostały poprzednie próby udowodnienia optymalności algorytmu. Autorzy przeprowadzili także własny dowód na optymalność algorytmu A*. Dowód polega na fakcie, iż kiedy funkcja heurystyki nigdy nie przeszacowuje, wtedy algorytm A* jest optymalny. Dla grafu algorytm A* od zadanego wierzchołka startowego tworzy ścieżkę, wybierając niezbadany sąsiedni wierzchołek. Wybiera go w~sposób, aby minimalizować funkcję:
 \newline
 \newline
 \begin{math} f(x) = g(x) + h(x)\end{math}
@@ -86,24 +86,24 @@ gdzie:
 \newline
 \newline
 \begin{math} g(x) \end{math} to suma wag krawędzi od wierzchołka startowego do wierzchołka x, a
-\begin{math} h(x) \end{math} to przewidywana przez funkcję heurystyki suma wag z wierzchołka x do wierzchołka docelowego.
+\begin{math} h(x) \end{math} to przewidywana przez funkcję heurystyki suma wag z~wierzchołka x~do wierzchołka docelowego.
 \newline
 \indent
-W artykule \cite{delling2009engineering} autorzy przeprowadzili porównanie algorytmów do planowania drogi. Na początku omówiony został algorytm Dijkstry, aby później pokazać algorytmy od niego szybsze. Następnie, autorzy przedstawiają kolejki priorytetowe jako implementację algorytmu Dijkstry, które są w stanie poprawić jego złożoność z \begin{math} O(n^2) \end{math} do \begin{math} O(nlogn) \end{math}. Używanie kolejek priorytetowych nie sprawdza się jednak na bardzo dużych zbiorach danych. Następną zaproponowaną modyfikacją algorytmu Dijkstry jest wyszukiwanie dwukierunkowe. Algorytm równolegle uruchamia algorytm Dijkstry, w stronę celu oraz w stronę startu. Kiedy wierzchołek jest odwiedzony z dwóch strony, ścieżka może być znaleziona. Kolejno opisany został Algorytm A* korzystający z funkcji heurystyki, opartej o odległość Euklidesową. Według autorów znajdywanie najkrótszej ścieżko jest niewiele przyspieszone. Mimo to czas wykonania algorytmu A* jest krótszy od czasu wykonania algorytmu Dijkstry.
+W~artykule \cite{delling2009engineering} autorzy przeprowadzili porównanie algorytmów do planowania drogi. Na początku omówiony został algorytm Dijkstry, aby później pokazać algorytmy od niego szybsze. Następnie, autorzy przedstawiają kolejki priorytetowe jako implementację algorytmu Dijkstry, które są w~stanie poprawić jego złożoność z~\begin{math} O(n^2) \end{math} do \begin{math} O(nlogn) \end{math}. Używanie kolejek priorytetowych nie sprawdza się jednak na bardzo dużych zbiorach danych. Następną zaproponowaną modyfikacją algorytmu Dijkstry jest wyszukiwanie dwukierunkowe. Algorytm równolegle uruchamia algorytm Dijkstry, w~stronę celu oraz w~stronę startu. Kiedy wierzchołek jest odwiedzony z~dwóch strony, ścieżka może być znaleziona. Kolejno opisany został Algorytm A* korzystający z~funkcji heurystyki, opartej o~odległość Euklidesową. Według autorów znajdywanie najkrótszej ścieżko jest niewiele przyspieszone. Mimo to czas wykonania algorytmu A* jest krótszy od czasu wykonania algorytmu Dijkstry.
 \newline
 \indent
-Wykorzystanie modyfikacji algorytmu A* wraz z algorytmem Wavefront zostało przedstawione w artykule \cite{wojnicki2015robust}. Autorzy przedstawili wersję algorytmu A*, która operuje na stanach. Autorzy pokazali przykład na dwuwymiarowej, dyskretnej przestrzeni kwadratowej o boku 7. Stanem początkowym jest rozłożenie czterech obiektów na rogach zadanej przestrzeni. Stanem końcowym natomiast, jest znalezienie się tych czterech obiektów po przeciwnych stronach przekątnych. Algortym Wavefront został zastosowany w celu otrzymania planów wielowariantowych dla obiektów. Zastosowanie algorytmu A* operującego na stanach wraz z prędkościami pojazdów wnosi duże narzuty obliczeniowe. Przeprowadzenie koordynacji ruchu dla dużych sieci skrzyżowań używając algorytmu A* wraz z Wavefront jest zbyt złożone.
+Wykorzystanie modyfikacji algorytmu A* wraz z~algorytmem Wavefront zostało przedstawione w~artykule \cite{wojnicki2015robust}. Autorzy przedstawili wersję algorytmu A*, która operuje na stanach. Autorzy pokazali przykład na dwuwymiarowej, dyskretnej przestrzeni kwadratowej o~boku 7. Stanem początkowym jest rozłożenie czterech obiektów na rogach zadanej przestrzeni. Stanem końcowym natomiast, jest znalezienie się tych czterech obiektów po przeciwnych stronach przekątnych. Algortym Wavefront został zastosowany w~celu otrzymania planów wielowariantowych dla obiektów. Zastosowanie algorytmu A* operującego na stanach wraz z~prędkościami pojazdów wnosi duże narzuty obliczeniowe. Przeprowadzenie koordynacji ruchu dla dużych sieci skrzyżowań używając algorytmu A* wraz z~Wavefront jest zbyt złożone.
 \newline
 \indent
-W artykule \cite{elhalawany2013modified} autorzy zaproponowali modyfikację algorytmu A*, która skupia się na bezpieczeństwie w problemie nawigacji robotów. Modyfikacja polega na wzięciu pod uwagę rozmiaru robota oraz unikanie ostrych skrętów, jeżeli chodzi o bezpieczeństwo. Do algorytmu A* przekazywany jest stan początkowy oraz cel, jaki robot ma osiągnąć. Rozwiązanie przedstawione jest dla pojedynczego pojazdu, który ma za zadanie znaleźć najprostszą i bezpieczną ścieżkę wraz z unikaniem statycznych kolizji. Tego podejścia nie da się zastosować dla wielu pojazdów poruszających się po sieci skrzyżowań.
+W~artykule \cite{elhalawany2013modified} autorzy zaproponowali modyfikację algorytmu A*, która skupia się na bezpieczeństwie w~problemie nawigacji robotów. Modyfikacja polega na wzięciu pod uwagę rozmiaru robota oraz unikanie ostrych skrętów, jeżeli chodzi o~bezpieczeństwo. Do algorytmu A* przekazywany jest stan początkowy oraz cel, jaki robot ma osiągnąć. Rozwiązanie przedstawione jest dla pojedynczego pojazdu, który ma za zadanie znaleźć najprostszą i~bezpieczną ścieżkę wraz z~unikaniem statycznych kolizji. Tego podejścia nie da się zastosować dla wielu pojazdów poruszających się po sieci skrzyżowań.
 
 \section{Modyfikacje A*}
 
 \indent
-Autorzy artykułu \cite{munteanmobile} opisali modyfikację algorytmu A* do planowania ruchu. Rozwiązanie zostało zaprezentowanie dla robotów mobilnych. Autorzy stwierdzają fakt, że algorytm A* dla dużych danych potrzebuje dużo pamięci, żeby śledzić dane, które są związane z aktualnym wierzchołkiem. Wspomniana została także modyfikacja algorytmu A*, która polega na równoczesnym przeszukiwaniu grafu w dwóch kierunkach. Kolejną modyfikacją jest IDA*, która nie używa pamięci do przechowywania wcześniej odwiedzonych wierzchołków. Minusem tej modyfikacji jest fakt, iż IDA* odwiedza niektóre wierzchołki wiele razy. Na końcu, autorzy zaproponowali swoją modyfikację - Fast A*. W modyfikacjach zamiast list, użyte zostały drzewa binarne w celu przechowywania danych. W wyniku pracy zmodyfikowany algorytm Fast A* dawał lepsze wyniki od wersji klasycznej. Przedstawione modyfikacje są oparte o działanie na grafie, polegające na znalezieniu najkrótszej ścieżki z punktu startowego do punktu końcowego. Modyfikacje nie są w stanie wskazać najkrótszej ścieżki dla stanu początkowego i końcowego, którym może być na przykład położenie wszystkich samochodów na skrzyżowaniach.
+Autorzy artykułu \cite{munteanmobile} opisali modyfikację algorytmu A* do planowania ruchu. Rozwiązanie zostało zaprezentowanie dla robotów mobilnych. Autorzy stwierdzają fakt, że algorytm A* dla dużych danych potrzebuje dużo pamięci, żeby śledzić dane, które są związane z~aktualnym wierzchołkiem. Wspomniana została także modyfikacja algorytmu A*, która polega na równoczesnym przeszukiwaniu grafu w~dwóch kierunkach. Kolejną modyfikacją jest IDA*, która nie używa pamięci do przechowywania wcześniej odwiedzonych wierzchołków. Minusem tej modyfikacji jest fakt, iż IDA* odwiedza niektóre wierzchołki wiele razy. Na końcu, autorzy zaproponowali swoją modyfikację - Fast A*. W~modyfikacjach zamiast list, użyte zostały drzewa binarne w~celu przechowywania danych. W~wyniku pracy zmodyfikowany algorytm Fast A* dawał lepsze wyniki od wersji klasycznej. Przedstawione modyfikacje są oparte o~działanie na grafie, polegające na znalezieniu najkrótszej ścieżki z~punktu startowego do punktu końcowego. Modyfikacje nie są w~stanie wskazać najkrótszej ścieżki dla stanu początkowego i~końcowego, którym może być na przykład położenie wszystkich samochodów na skrzyżowaniach.
 \newline
 \indent
-W artykule \cite{oleiwi2014modified} autorzy zaproponowali genetyczny algorytm oparty na zmodyfikowanym algorytmie A* w celu optymalizacji znajdowania ścieżek dla wielu obiektów. Modyfikacja algorytmu A* polega na znalezieniu ścieżki suboptymalnej poprzez dodanie do algorytmu funkcji prawdopodobieństwa. Uniknięto więc szukania najkrótszej ścieżki, aby zwiększyć optymalność algorytmu. To rozwiązanie następnie jest przekazywane do algorytmu genetycznego. W rozwiązaniu uwzględnione zostało także unikanie kolizji. Autorzy opisali podejście optymalizacji szukania najkrótszej ścieżki dla pojedynczego pojazdu z unikaniem kolizji ze statycznymi elementami. Tego rozwiązania nie da się zastosować w sieci skrzyżowań, na której znajduje się wiele aut.
+W~artykule \cite{oleiwi2014modified} autorzy zaproponowali genetyczny algorytm oparty na zmodyfikowanym algorytmie A* w~celu optymalizacji znajdowania ścieżek dla wielu obiektów. Modyfikacja algorytmu A* polega na znalezieniu ścieżki suboptymalnej poprzez dodanie do algorytmu funkcji prawdopodobieństwa. Uniknięto więc szukania najkrótszej ścieżki, aby zwiększyć optymalność algorytmu. To rozwiązanie następnie jest przekazywane do algorytmu genetycznego. W~rozwiązaniu uwzględnione zostało także unikanie kolizji. Autorzy opisali podejście optymalizacji szukania najkrótszej ścieżki dla pojedynczego pojazdu z~unikaniem kolizji ze statycznymi elementami. Tego rozwiązania nie da się zastosować w~sieci skrzyżowań, na której znajduje się wiele aut.
 \newline
 \indent
-W celu planowania ruchu na skrzyżowaniach zostało przedstawione sporo rozwiązań. Większość z nich opiera się o stosowanie świateł. Powyżej zostały opisane optymalizacje świateł w celu przyspieszania ruchu drogowego. Rozwiązania te gwarantują bezpieczeństwo poprzez czekanie na świetle pomarańczowym, co powoduje kilkusekundowe straty na każdym skrzyżowaniu. Takich opóźnień nie ma stosując planowanie algorytmem. Przedstawione rozwiązania przy użyciu algorytmów planowania często nie brały pod uwagę unikania kolizji lub planowały jedynie ruch dla pojedynczego pojazdu. Tych podejść nie da się zastosować w celu zaplanowania ruchu na sieci skrzyżowań dla kilkunastu pojazdów.
+W~celu planowania ruchu na skrzyżowaniach zostało przedstawione sporo rozwiązań. Większość z~nich opiera się o~stosowanie świateł. Powyżej zostały opisane optymalizacje świateł w~celu przyspieszania ruchu drogowego. Rozwiązania te gwarantują bezpieczeństwo poprzez czekanie na świetle pomarańczowym, co powoduje kilkusekundowe straty na każdym skrzyżowaniu. Takich opóźnień nie ma stosując planowanie algorytmem. Przedstawione rozwiązania przy użyciu algorytmów planowania często nie brały pod uwagę unikania kolizji lub planowały jedynie ruch dla pojedynczego pojazdu. Tych podejść nie da się zastosować w~celu zaplanowania ruchu na sieci skrzyżowań dla kilkunastu pojazdów.
