--- a/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/4-implementation.tex
@@ -64,7 +64,7 @@ Koniecznym elementem w~koordynacji ruchu na skrzyżowaniach wielu pojazdów jest
 \item Unikanie kolizji aut poruszających się po tym samym pasie
 \item Unikanie kolizji na skrzyżowaniach
 \end{enumerate}
-Implementacja unikania kolizji pojazdów na tym samym pasie, polega na policzeniu obszarów dla samochodów na pasie, który będą one obejmowały w~jednym kroku czasowym wraz z~uwzględnieniem parametru bezpieczeństwa. Jeżeli obszary dwóch samochodów na jednym pasie pokrywają się - taki stan jest usuwany i~wówczas metoda 'neighbours' nie zwróci go jako stanu sąsiedniego. Na rysunku \ref{collision-avoidance-lane} przedstawiony jest przykład unikania kolizji dla samochodów poruszających się jednym pasem. Przykład przedstawiony jest z~parametrem bezpieczeństwa równym jeden. Samochody, mając przed sobą inny pojazd, czekają aż będzie dla nich miejsce. Stan pierwszy jest stanem startowym. Kolejno w~stanie drugim, pojazd \textbf{D} rusza i~zmienia swoją pozycję o~jeden do przodu, ponieważ nie ma żadnego pojazdu przed nim. Reszta pojazdów stoi i~czeka na miejsce. Następnie w~stanie trzecim, pojazd \textbf{C} widząc, że ma miejsce porusza się o~jedną pozycję do przodu. W~stanie następnym na miejsce czeka jedynie samochód \textbf{A} - reszta zmienia pozycję. W~kroku piątym i~szóstym pojazdy mając miejsce, swobodnie opuszczają skrzyżowanie.
+Implementacja unikania kolizji pojazdów na tym samym pasie, polega na policzeniu obszarów dla samochodów na pasie, który będą one obejmowały w~jednym kroku czasowym wraz z~uwzględnieniem parametru bezpieczeństwa. Jeżeli obszary dwóch samochodów na jednym pasie pokrywają się - taki stan jest usuwany i~wówczas metoda 'neighbours' nie zwróci go jako stanu sąsiedniego. Na rysunku \ref{collision-avoidance-lane} przedstawiony jest przykład unikania kolizji dla samochodów poruszających się jednym pasem. Przykład przedstawiony jest z~parametrem bezpieczeństwa równym jeden. Samochody, mając przed sobą inny pojazd, czekają aż będzie dla nich miejsce. Stan pierwszy jest stanem startowym. Kolejno w~stanie drugim, pojazd \textbf{D}~rusza i~zmienia swoją pozycję o~jeden do przodu, ponieważ nie ma żadnego pojazdu przed nim. Reszta pojazdów stoi i~czeka na miejsce. Następnie w~stanie trzecim, pojazd \textbf{C}~widząc, że ma miejsce porusza się o~jedną pozycję do przodu. W~stanie następnym na miejsce czeka jedynie samochód \textbf{A}~-~reszta zmienia pozycję. W~kroku piątym i~szóstym pojazdy mając miejsce, swobodnie opuszczają skrzyżowanie.
 \begin{figure}[H]
     \includegraphics[width=1.0\textwidth]{collision-avoidance-lane.png}
   \caption{Unikanie kolizji na pasie}
