Switching from bibliography to Bibliografia

--- a/project_description/new_latex_documentation/msc-docs-template/main.tex
+++ b/project_description/new_latex_documentation/msc-docs-template/main.tex
@@ -66,7 +66,7 @@
 \nocite{*} % forces bibtex to include all citations, whether or not they were referred to in the paper
 
 \cleardoublepage
-\addcontentsline{toc}{chapter}{Bibliography}
+\addcontentsline{toc}{chapter}{Bibliografia}
 \bibliographystyle{bib-style}
 \bibliography{bibliography}
 
